--- a/html/gallery.html
+++ b/html/gallery.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar" id="gallery-nav">
         <ul class="nav-links">
             <li><a href="index.html">HEM</a></li>
             <li><a href="menu.html">MENY</a></li>
@@ -17,6 +17,34 @@
             <li><a href="contact.html">KONTAKT</a></li>
             <li id="book"><a href="book.html">BOKA BORD</a></li>
         </ul>
-</nav>
+    </nav>
+
+
+<div id="gallery">
+    <figure>
+        <img src="../images/gallery/gallery (1).jpg" alt="" loading="lazy">
+    </figure>
+    <figure>
+        <img src="../images/gallery/gallery (2).jpg" alt="" loading="lazy">
+    </figure>
+    <figure>
+        <img src="../images/gallery/gallery (3).jpg" alt="" loading="lazy">
+    </figure>
+    <figure>
+        <img src="../images/gallery/gallery (4).jpg" alt="" loading="lazy">
+    </figure>
+    <figure>
+        <img src="../images/gallery/gallery (5).jpg" alt="" loading="lazy">
+    </figure>
+    <figure>
+        <img src="../images/gallery/gallery (6).jpg" alt="" loading="lazy">
+    </figure>
+    <figure>
+        <img src="../images/gallery/gallery (7).jpg" alt="" loading="lazy">
+    </figure>
+</div>
+
+<script src="../script/script.js"></script>
+
 </body>
 </html>
