--- a/html/gallery.html
+++ b/html/gallery.html
@@ -44,6 +44,17 @@
     </figure>
 </div>
 
+<footer>
+    <div class="contact-content">
+        <h1>rÅVAra</h1>
+            <div class="contact-links">
+                <p class="contact-info"><a href="mailto:bokningar@ravararestaurang.se">bokningar@ravararestaurang.se</a></p>
+                <p class="contact-info"><a target="_blank" href="https://www.taby.se/ava">Åva Gymnasium</a></p>
+                <p class="contact-info"><a target="_blank" href="https://www.instagram.com/avagymnasiumtaby/?hl=sv">Instagram</a></p>
+                <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4057.1268668913917!2d18.062087916918955!3d59.44035540725552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9b93802656b1%3A0x1a1ad5d690f3928b!2zw4V2YSBza29sZ3LDpG5kIDEtMywgMTgzIDE0IFTDpGJ5!5e0!3m2!1ssv!2sse!4v1715848375894!5m2!1ssv!2sse" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+</footer>
+
 <script src="../script/script.js"></script>
 
 </body>
