--- a/html/contact.html
+++ b/html/contact.html
@@ -12,9 +12,7 @@
             <li><a href="index.html">HEM</a></li>
             <li><a href="menu.html">MENY</a></li>
             <li><a href="gallery.html">GALLERI</a></li>
-            <li class="logo"><h1><a href="index.html">rÅVAra</a></h1></li>
-            <li><a href="seatings.html">SITTNINGAR</a></li>
-            <li><a href="contact.html"><span>KONTAKT</span></a></li>
+            <li class="logo"><h1><a href="index.html">rÅVAra</a></h1></li>            <li><a href="contact.html"><span>KONTAKT</span></a></li>
             <li id="book"><a href="book.html">BOKA BORD</a></li>
         </ul>
     </nav>
