--- a/html/index.html
+++ b/html/index.html
@@ -13,9 +13,7 @@
             <li><a href="index.html"><span>HEM</span></a></li>
             <li><a href="menu.html">MENY</a></li>
             <li><a href="gallery.html">GALLERI</a></li>
-            <li class="logo"><h1><a href="index.html">rÅVAra</a></h1></li>
-            <li><a href="seatings.html">SITTNINGAR</a></li>
-            <li><a href="contact.html">KONTAKT</a></li>
+            <li class="logo"><h1><a href="index.html">rÅVAra</a></h1></li>            <li><a href="contact.html">KONTAKT</a></li>
             <li id="book"><a href="book.html">BOKA BORD</a></li>
         </ul>
     </nav>
