--- a/html/index.html
+++ b/html/index.html
@@ -8,16 +8,22 @@
 </head>
 <body>
     <div class="main-nav-container">
-    <nav class="navbar">
-        <ul class="nav-links">
-            <li><a href="index.html"><span>HEM</span></a></li>
-            <li><a href="menu.html">MENY</a></li>
-            <li><a href="gallery.html">GALLERI</a></li>
-            <li class="logo"><h1><a href="index.html">rÅVAra</a></h1></li>            <li><a href="contact.html">KONTAKT</a></li>
-            <li id="book"><a href="book.html">BOKA BORD</a></li>
-        </ul>
-    </nav>
-</div>
+        <nav class="navbar">
+            <div id="hamburger">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <ul class="nav-links">
+                <li class="link"><a href="index.html"><span>HEM</span></a></li>
+                <li class="link"><a href="menu.html">MENY</a></li>
+                <li class="link"><a href="gallery.html">GALLERI</a></li>
+                <li class="logo"><h1><a href="index.html">rÅVAra</a></h1></li>            
+                <li class="link"><a href="contact.html">KONTAKT</a></li>
+                <li class="link" id="book"><a href="book.html">BOKA BORD</a></li>
+            </ul>
+        </nav>
+    </div>
 
 <section>
     <div class="container">
