--- a/html/index.html
+++ b/html/index.html
@@ -1,55 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rÅVAra</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <div class="main-nav-container">
         <nav class="navbar">
-            <div id="hamburger">
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
             <ul class="nav-links">
                 <li class="link"><a href="index.html"><span>HEM</span></a></li>
                 <li class="link"><a href="menu.html">MENY</a></li>
                 <li class="link"><a href="gallery.html">GALLERI</a></li>
-                <li class="logo"><h1><a href="index.html">rÅVAra</a></h1></li>            
+                <li class="logo">
+                    <h1><a href="index.html">rÅVAra</a></h1>
+                </li>
+                <li>
+                    <div id="hamburger">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                </li>
                 <li class="link"><a href="contact.html">KONTAKT</a></li>
                 <li class="link" id="book"><a href="book.html">BOKA BORD</a></li>
             </ul>
         </nav>
     </div>
 
-<section>
-    <div class="container">
-    <div class="info">
-        <h2>Sveriges bästa restaurangskola</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <br><p>rÅVAra</p>
-    </div>
-        <figure>
-            <img src="../images/table.jpg" alt="dukat bord">
-        </figure>
-    </div>
-</section>
+    <nav class="hamburger-nav">
+        <ul class="nav-links">
+            <li><a href="index.html"><span>HEM</span></a></li>
+            <li><a href="menu.html">MENY</a></li>
+            <li><a href="gallery.html">GALLERI</a></li>
+            <li><a href="contact.html">KONTAKT</a></li>
+            <li id="book"><a href="book.html">BOKA BORD</a></li>
+        </ul>
+    </nav>
 
-<footer>
+    <section>
+        <div class="container">
+            <div class="info">
+                <h2>Sveriges bästa restaurangskola</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum.</p>
+                <br>
+                <p>rÅVAra</p>
+            </div>
+            <figure>
+                <img src="../images/table.jpg" alt="dukat bord">
+            </figure>
+        </div>
+    </section>
+
+    <footer>
         <div class="contact-links">
             <h2>rÅVAra</h2>
-            <p class="contact-info"><a target="_blank" href="https://www.instagram.com/avagymnasiumtaby/?hl=sv">Instagram</a></p>
+            <p class="contact-info"><a target="_blank"
+                    href="https://www.instagram.com/avagymnasiumtaby/?hl=sv">Instagram</a></p>
             <p class="contact-info"><a target="_blank" href="https://www.taby.se/ava">Åva Gymnasium</a></p>
             <p class="contact-info"><a href="mailto:bokningar@ravararestaurang.se">bokningar@ravararestaurang.se</a></p>
-            <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4057.1268668913917!2d18.062087916918955!3d59.44035540725552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9b93802656b1%3A0x1a1ad5d690f3928b!2zw4V2YSBza29sZ3LDpG5kIDEtMywgMTgzIDE0IFTDpGJ5!5e0!3m2!1ssv!2sse!4v1715848375894!5m2!1ssv!2sse" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe id="map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4057.1268668913917!2d18.062087916918955!3d59.44035540725552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9b93802656b1%3A0x1a1ad5d690f3928b!2zw4V2YSBza29sZ3LDpG5kIDEtMywgMTgzIDE0IFTDpGJ5!5e0!3m2!1ssv!2sse!4v1715848375894!5m2!1ssv!2sse"
+                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-</footer>
+    </footer>
 
     <script src="../script/script.js"></script>
 </body>
+
 </html>
