--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
         </nav>
     </div>
 
-    <nav class="hamburger-nav">
+    <nav class="hamburger-nav hidden">
         <ul class="nav-links">
             <li><a href="index.html"><span>HEM</span></a></li>
             <li><a href="menu.html">MENY</a></li>
