Klar med projektet

--- a/html/book.html
+++ b/html/book.html
@@ -35,7 +35,7 @@
             <li><a href="menu.html">MENY</a></li>
             <li><a href="gallery.html">GALLERI</a></li>
             <li><a href="contact.html">KONTAKT</a></li>
-            <li id="book"><a href="book.html">BOKA BORD</a></li>
+            <li><a href="book.html">BOKA BORD</a></li>
         </ul>
     </nav>
 
@@ -43,32 +43,32 @@
         <h1>Boka Bord</h1>
         <form onsubmit="BookConfirmation()">
             <div class="form-group">
-                <label for="name">Namn:</label>
+                <label>Namn:</label>
                 <input type="text" name="name" required>
             </div>
 
             <div class="form-group">
-                <label for="email">E-post:</label>
+                <label>E-post:</label>
                 <input type="email" name="email" required>
             </div>
 
             <div class="form-group">
-                <label for="phone">Telefonnummer:</label>
+                <label>Telefonnummer:</label>
                 <input type="tel" name="phone" required>
             </div>
 
             <div class="form-group">
-                <label for="date">Datum:</label>
+                <label>Datum:</label>
                 <input type="date" name="date" required>
             </div>
 
             <div class="form-group">
-                <label for="time">Tid:</label>
+                <label>Tid:</label>
                 <input type="time" name="time" required>
             </div>
 
             <div class="form-group">
-                <label for="number">Antal gäster:</label>
+                <label>Antal gäster:</label>
                 <input type="number" name="number" min="1" max="6" required>
             </div>
 
