--- a/html/contact.html
+++ b/html/contact.html
@@ -35,12 +35,12 @@
             <li><a href="menu.html">MENY</a></li>
             <li><a href="gallery.html">GALLERI</a></li>
             <li><a href="contact.html">KONTAKT</a></li>
-            <li id="book"><a href="book.html">BOKA BORD</a></li>
+            <li><a href="book.html">BOKA BORD</a></li>
         </ul>
     </nav>
 
     <figure id="contact-img">
-        <img src="../images/restaurant.jpg" alt="bild på restaurang">
+        <img src="../images/restaurant.jpg" alt="bild på restaurang" loading="lazy">
     </figure>
 
     <footer>
