--- a/html/gallery.html
+++ b/html/gallery.html
@@ -35,32 +35,32 @@
             <li><a href="menu.html">MENY</a></li>
             <li><a href="gallery.html">GALLERI</a></li>
             <li><a href="contact.html">KONTAKT</a></li>
-            <li id="book"><a href="book.html">BOKA BORD</a></li>
+            <li><a href="book.html">BOKA BORD</a></li>
         </ul>
     </nav>
 
 
     <div id="gallery">
         <figure>
-            <img src="../images/gallery/gallery (1).jpg" alt="" loading="lazy">
+            <img src="../images/gallery/gallery(1).jpg" alt="Två tallrikar med mat" loading="lazy">
         </figure>
         <figure>
-            <img src="../images/gallery/gallery (2).jpg" alt="" loading="lazy">
+            <img src="../images/gallery/gallery(2).jpg" alt="Tallrik med pastarätt" loading="lazy">
         </figure>
         <figure>
-            <img src="../images/gallery/gallery (3).jpg" alt="" loading="lazy">
+            <img src="../images/gallery/gallery(3).jpg" alt="Bord med olika maträtter" loading="lazy">
         </figure>
         <figure>
-            <img src="../images/gallery/gallery (4).jpg" alt="" loading="lazy">
+            <img src="../images/gallery/gallery(4).jpg" alt="Restaurang på kvällen" loading="lazy">
         </figure>
         <figure>
-            <img src="../images/gallery/gallery (5).jpg" alt="" loading="lazy">
+            <img src="../images/gallery/gallery(5).jpg" alt="Restaurang med folk" loading="lazy">
         </figure>
         <figure>
-            <img src="../images/gallery/gallery (6).jpg" alt="" loading="lazy">
+            <img src="../images/gallery/gallery(6).jpg" alt="Kock som lägger upp mat" loading="lazy">
         </figure>
         <figure>
-            <img src="../images/gallery/gallery (7).jpg" alt="" loading="lazy">
+            <img src="../images/gallery/gallery(7).jpg" alt="Tom restaurang matsal" loading="lazy">
         </figure>
     </div>
 
