--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
@@ -37,7 +37,7 @@
             <li><a href="menu.html">MENY</a></li>
             <li><a href="gallery.html">GALLERI</a></li>
             <li><a href="contact.html">KONTAKT</a></li>
-            <li id="book"><a href="book.html">BOKA BORD</a></li>
+            <li><a href="book.html">BOKA BORD</a></li>
         </ul>
     </nav>
 
@@ -64,7 +64,7 @@
                 <p>rÅVAra</p>
             </div>
             <figure>
-                <img src="../images/table.jpg" alt="dukat bord">
+                <img src="../images/table.jpg" alt="dukat bord" loading="lazy">
             </figure>
         </div>
     </section>
