--- a/html/menu.html
+++ b/html/menu.html
@@ -35,13 +35,13 @@
             <li><a href="menu.html">MENY</a></li>
             <li><a href="gallery.html">GALLERI</a></li>
             <li><a href="contact.html">KONTAKT</a></li>
-            <li id="book"><a href="book.html">BOKA BORD</a></li>
+            <li><a href="book.html">BOKA BORD</a></li>
         </ul>
     </nav>
 
     <main>
         <section class="hero">
-            <h2>Menyer</h2>
+            <h1>Menyer</h1>
         </section>
 
         <section class="menu-links">
@@ -49,7 +49,41 @@
             <div class="button-wrap"><a>Vinlista</a></div>
             <div class="button-wrap"><a>Desertmeny</a></div>
         </section>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Drink</th>
+                    <th>Pris (SEK)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="dark">
+                    <td>Mojito</td>
+                    <td>120</td>
+                </tr>
+                <tr>
+                    <td>Redbull Vodka</td>
+                    <td>110</td>
+                </tr>
+                <tr class="dark">
+                    <td>Margarita</td>
+                    <td>130</td>
+                </tr>
+                <tr>
+                    <td>Gin & Tonic</td>
+                    <td>100</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="2">Priser inkluderar moms</td>
+                </tr>
+            </tfoot>
+        </table>
     </main>
+
+
 
     <footer>
         <div class="contact-links">
